--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,25 +9,19 @@ permissions:
   contents: read # required for actions/checkout
 
 jobs:
+  call-tests:
+    uses: ./.github/workflows/test.yml
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Git clone
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Set up Python 3.12
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: "3.12"
-      - name: Install
-        run: pip install ".[dev]"
-      - name: Test
-        run: make test
-      - name: AWS login
-        uses: aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df # v4.2.1
+      - uses: aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df # v4.2.1
         with:
           role-to-assume: arn:aws:iam::119672615070:role/StackSet-CustomControlTower--CfnAssetsPublisherRole-fo8sJRyzir1L
           role-session-name: rvm-github-publishing
           aws-region: eu-west-2
-      - name: Publish
-        run: |
+      - run: |
           ASSETS_BUCKET=stackset-customcontroltower-cfn-asset-assetsbucket-istfefgfkzgy make publish
