--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   id-token: write # required for requesting the JWT
-  contents: read # required for actions/checkout
+  contents: write # required for actions/checkout and softprops/action-gh-release
 
 jobs:
   call-tests:
